[gd_scene load_steps=5 format=3 uid="uid://ta0q78l0u8yn"]

[ext_resource type="PackedScene" uid="uid://0v523dv56p6t" path="res://models/kerfbody.glb" id="1_g4swy"]
[ext_resource type="PackedScene" uid="uid://dgacr0smtpm3t" path="res://models/kerfhead.tscn" id="2_2nrxc"]
[ext_resource type="Script" uid="uid://b83myt7dfh7l6" path="res://models/kerfbody.gd" id="2_xovwu"]
[ext_resource type="PackedScene" uid="uid://dr8j0wwow6wgs" path="res://models/kerfarm.tscn" id="4_h4io1"]

[node name="kerfbody" instance=ExtResource("1_g4swy")]
script = ExtResource("2_xovwu")

[node name="Skeleton3D" parent="Armature" index="0"]
bones/1/rotation = Quaternion(-0.683248, -8.70449e-08, -8.14496e-08, 0.730186)

[node name="Vert" parent="Armature/Skeleton3D" index="0"]
layers = 3

[node name="SpringBoneSimulator3D" type="SpringBoneSimulator3D" parent="Armature/Skeleton3D" index="1"]
setting_count = 1
settings/0/root_bone_name = "Bone.001"
settings/0/root_bone = 1
settings/0/end_bone_name = "Bone.002"
settings/0/end_bone = 2
settings/0/extend_end_bone = false
settings/0/center_from = 0
settings/0/individual_config = false
settings/0/rotation_axis = 3
settings/0/radius/value = 0.02
settings/0/radius/damping_curve = null
settings/0/stiffness/value = 1.0
settings/0/stiffness/damping_curve = null
settings/0/drag/value = 0.4
settings/0/drag/damping_curve = null
settings/0/gravity/value = 0.0
settings/0/gravity/damping_curve = null
settings/0/gravity/direction = Vector3(0, -1, 0)
settings/0/enable_all_child_collisions = true
settings/0/exclude_collision_count = 0

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="Armature/Skeleton3D" index="2"]
transform = Transform3D(1, -3.87677e-14, 1.8686e-14, 4.4201e-15, 0.347314, 0.937749, -5.46151e-14, -0.937749, 0.347314, -7.35581e-15, 0.00466466, -0.183997)
bone_name = "Bone.002"
bone_idx = 2

[node name="heads" type="Node3D" parent="Armature/Skeleton3D/BoneAttachment3D" index="0"]
transform = Transform3D(1, 0, 0, -3.38813e-21, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="head1" type="Node3D" parent="Armature/Skeleton3D/BoneAttachment3D/heads" index="0"]
transform = Transform3D(1, -6.45938e-14, -2.10589e-14, 3.79719e-15, 0.362617, -0.931939, 6.78338e-14, 0.931939, 0.362617, 5.05226e-15, 0.173837, 0.0882579)

[node name="kerfhead" parent="Armature/Skeleton3D/BoneAttachment3D/heads/head1" index="0" instance=ExtResource("2_2nrxc")]

[node name="head2" type="Node3D" parent="Armature/Skeleton3D/BoneAttachment3D/heads" index="1"]
transform = Transform3D(1, -6.45938e-14, -2.10589e-14, 3.79719e-15, 0.362617, -0.931939, 6.78338e-14, 0.931939, 0.362617, 5.05226e-15, 0.173837, 0.0882579)

[node name="kerfhead" parent="Armature/Skeleton3D/BoneAttachment3D/heads/head2" index="0" instance=ExtResource("2_2nrxc")]
transform = Transform3D(0.965926, 1.56172e-21, -0.258819, 0, 1, 0, 0.258819, 0, 0.965926, 0.05, 0, 0)

[node name="kerfhead2" parent="Armature/Skeleton3D/BoneAttachment3D/heads/head2" index="1" instance=ExtResource("2_2nrxc")]
transform = Transform3D(0.965926, 0, 0.258819, 0, 1, 0, -0.258819, 0, 0.965926, -0.05, 0, 0)

[node name="head3" type="Node3D" parent="Armature/Skeleton3D/BoneAttachment3D/heads" index="2"]
transform = Transform3D(1, -6.45938e-14, -2.10589e-14, 3.79719e-15, 0.362617, -0.931939, 6.78338e-14, 0.931939, 0.362617, 5.05226e-15, 0.173837, 0.0882579)

[node name="kerfhead" parent="Armature/Skeleton3D/BoneAttachment3D/heads/head3" index="0" instance=ExtResource("2_2nrxc")]

[node name="kerfhead2" parent="Armature/Skeleton3D/BoneAttachment3D/heads/head3" index="1" instance=ExtResource("2_2nrxc")]
transform = Transform3D(0.846193, 0, -0.532876, 0, 1, 0, 0.532876, 0, 0.846193, 0.047, 0, 0.016)

[node name="kerfhead3" parent="Armature/Skeleton3D/BoneAttachment3D/heads/head3" index="2" instance=ExtResource("2_2nrxc")]
transform = Transform3D(0.846193, 0, 0.532876, 0, 1, 0, -0.532876, 0, 0.846193, -0.0465554, -0.000269875, 0.0164862)

[node name="arms" type="Node3D" parent="Armature/Skeleton3D/BoneAttachment3D" index="1"]
transform = Transform3D(1, -4.28342e-14, -2.41574e-14, -7.78611e-15, 0.347132, -0.937816, 4.85565e-14, 0.937816, 0.347132, 0, 0, 0)

[node name="kerfarml1" parent="Armature/Skeleton3D/BoneAttachment3D/arms" index="0" instance=ExtResource("4_h4io1")]
transform = Transform3D(1, 5.41803e-21, -3.38813e-21, -6.59801e-21, 1, 2.91038e-11, 0, -2.91038e-11, 1, -0.135661, -1.33906e-05, -0.0689664)

[node name="kerfarml2" parent="Armature/Skeleton3D/BoneAttachment3D/arms" index="1" instance=ExtResource("4_h4io1")]
transform = Transform3D(1, 1.55833e-20, -8.47033e-21, -1.67624e-20, 1, 7.27596e-11, 0, -7.27596e-11, 1, -0.114861, 2.02763e-05, 0.104427)
visible = false

[node name="kerfarmr1" parent="Armature/Skeleton3D/BoneAttachment3D/arms" index="2" instance=ExtResource("4_h4io1")]
transform = Transform3D(1, 5.41803e-21, -3.38813e-21, -6.59801e-21, 1, 2.91038e-11, 0, -2.91038e-11, 1, 0.136, 0, -0.069)

[node name="kerfarmr2" parent="Armature/Skeleton3D/BoneAttachment3D/arms" index="3" instance=ExtResource("4_h4io1")]
transform = Transform3D(1, 1.55833e-20, -8.47033e-21, -1.67624e-20, 1, 7.27596e-11, 0, -7.27596e-11, 1, 0.115, 0, 0.104)
visible = false
